--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-	<!-- 
+	<!--
 	<div id="comingsoon">
 	<img src="longhail_coming_soon.png">
 
-	</div> 
+	</div>
 	-->
 	<div id="fixed">
 		<div id="header">
@@ -23,50 +23,51 @@
 			</div>
 
 			<div id="nav">
-				<a id="nav_about" href="#landingtext">
-					<span> about </span>
-					<!-- <img id="about" src="nav_about_light.png"> -->
-				</a>
-
-				<a id="nav_projects" href="#thumbs"> 
-					<span> projects </span>
-					<!-- <img id="projects" src="nav_projects.png"> -->
-				</a>
-				
-				<a id="nav_contact" href="#contact"> 
-					<span> contact </span>
-					<!-- <img id="contact" src="nav_contact.png"> -->
-				</a>
+				<ul class="nav">
+					<li>
+						<a id="nav_about" href="#landingtext">
+							<span> about </span>
+							<!-- <img id="about" src="nav_about_light.png"> -->
+						</a>
+					</li>
+					<li>
+						<a id="nav_projects" href="#thumbs">
+							<span> projects </span>
+							<!-- <img id="projects" src="nav_projects.png"> -->
+						</a>
+					</li>
+					<li>
+						<a id="nav_contact" href="#contact">
+							<span> contact </span>
+							<!-- <img id="contact" src="nav_contact.png"> -->
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 		<hr>
 	</div>
 
-	<div id="content">
-		
-		<div id="aboutme">
+	<div id="aboutme">
+		<div id="landingtext">
+			<p>Hallo, mein Name ist <strong>Hannah Langhagel!</strong><br>
+			Ich komme aus München und lebe seit 2009 in Salzburg.<br>
+			2012 habe ich dort meinen Bachelor of Arts in Arts and Design absolviert und befinde mich derzeit auf dem Weg, meinen Master of Arts in Arts and Design im Herbst 2014 abzuschließen.</p>
 
-			<div id="landingtext">
-				<p>Hallo, mein Name ist <strong>Hannah Langhagel!</strong><br> 
-				Ich komme aus München und lebe seit 2009 in Salzburg.<br> 
-				2012 habe ich dort meinen Bachelor of Arts in Arts and Design absolviert und befinde mich derzeit auf dem Weg, meinen Master of Arts in Arts and Design im Herbst 2014 abzuschließen.</p> 
+			<p>Ich bin <strong>Webdesignerin</strong> und stets auf der Suche nach spannenden Freelance-Aufträgen!</p>
 
-				<p>Ich bin <strong>Webdesignerin</strong> und stets auf der Suche nach spannenden Freelance-Aufträgen!</p>
+			<p>Wenn ich nicht gerade Konzeptioniere, Skribble oder Designe, widme ich mich am liebsten der Musik. Ich spiele <a href="http://youtube.com/honigkuchenpferd182">Schlagzeug.</a>
+			Außerdem habe ich eine Ausbildung im Bereich <a href="http://onehundredpercent.at">Audio Engineering</a> absolviert.</p>
 
-				<p>Wenn ich nicht gerade Konzeptioniere, Skribble oder Designe, widme ich mich am liebsten der Musik. Ich spiele <a href="http://youtube.com/honigkuchenpferd182">Schlagzeug.</a>
-				Außerdem habe ich eine Ausbildung im Bereich <a href="http://onehundredpercent.at">Audio Engineering</a> absolviert.</p>
+			<!--Hello, my name is Hannah Langhagel! I’m from Salzburg, Austria and currently doing my Masters degree in Design and Arts. Let me show you some of <a href="projects.html">my projects!</a>
+			By the way: If you're interested in sound stuff, you should also visit my <a href="http://onehundredpercent.at">sound portfolio.</a>
+			If you like my work (or not), feel free to contact me and give me loads of projects!
+			Besides designing and sound engineering, I like to play drums and I also post <a href="http://youtube.com/honigkuchenpferd182">drum covers</a> from time to time. -->
 
-				<!--Hello, my name is Hannah Langhagel! I’m from Salzburg, Austria and currently doing my Masters degree in Design and Arts. Let me show you some of <a href="projects.html">my projects!</a>
-				By the way: If you're interested in sound stuff, you should also visit my <a href="http://onehundredpercent.at">sound portfolio.</a> 
-				If you like my work (or not), feel free to contact me and give me loads of projects!
-				Besides designing and sound engineering, I like to play drums and I also post <a href="http://youtube.com/honigkuchenpferd182">drum covers</a> from time to time. -->
+		</div>
 
-			</div>
-
-			<div id="profilfoto"> 
-				<img src="profilpic/red.jpg">
-			</div>
-
+		<div id="profilfoto">
+			<img src="profilpic/red.jpg">
 		</div>
 	</div>
 
@@ -94,7 +95,7 @@
 		</div>
 
 	</div>
-	
+
 	<div id="contact">
 		<p>Warum Longhail.com? <br>
 		Lang=Long, Hagel=Hail. Wörtlich übersetzt bedeutet Langhagel im Englischen also Longhail. Und weil Longhail einfacher auszusprechen ist, (gerade auch für Menschen die der deutschen Sprache nicht mächtig sind) habe ich mich dazu entschieden, meine Arbeiten unter dem Namen Longhail zu präsentieren.</p>
@@ -106,6 +107,11 @@
 		Rot. Grün. Blau. - Farben und Farbwerte, mit denen ich alltäglich arbeite.</p>
 
 	</div>
+
+	<script type="text/javascript" src="javascripts/jquery.js"></script>
+	<script type="text/javascript" src="javascripts/bootstrap_scrollspy.js"></script>
+	<script type="text/javascript" src="javascripts/jquery_scrollto.js"></script>
+	<script type="text/javascript" src="javascripts/site.js"></script>
 
 </body>
 </html>
